tests/valid/enum/outlives_bound_constructor.facet
enum NeedsOutlives<'a, 'b> where 'a: 'b {
  Empty
}

fn make<'a, 'b>() -> unrestricted NeedsOutlives<'a, 'b> where 'a: 'b {
  NeedsOutlives<'a, 'b>::Empty()
}
