tests/invalid/struct/mutually_recursive_struct.facet
struct A {
  b: unrestricted B
}

struct B {
  a: unrestricted A
}

fn main() -> unrestricted () {
  ()
}
